added css and html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>My Personal Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Site Demo</h1>
+    <section class="header-section">
+        <div id="padding" class="helf-width">
+            <h2>Hello, I'm</h2>
+            <h1 class="name-color">Jack Smith</h1>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.</p>
+            <br>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/shakibpc/">HIRE ME</a>
+        </div>
+        <div id="image" class="helf-width">
+            <img src="images/peter.png" alt="">
+        </div>
+    </section>
+    <section class="biography-section">
+        <div id="image" class="helf-width"> 
+            <img src="images/peter.png" alt="">
+        </div>
+      
+        <div id="padding-two" class="helf-width">
+                <h1>Biography </h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type </p>
+                <br>
+                <a class="link-button" target="blank" href="#">Download CV  </a>
+        </div>
+    </section>
+    <section id="low-height" class="latestwork-section">
+        <h1 id="headding" >My Latest Work </h1>
+        <br>
+        <div class="work-image"> 
+            <img src="images/latest-work/work-1.png" alt="">
+        </div>
+        <div class="work-image">
+               <img src="images/latest-work/work-2.jpg" alt="">
+        </div >
+        <div class="work-image"> 
+            <img src="images/latest-work/work-3.jpg" alt="">
+        </div>
+    </section>
+    <section class="last-section">
+         <h3 class="client-headder">What Client are say</h3>
+        <br>
+        <br>
+        <h3 class="center"> Bruce Moccy </h3>
+        <p class="center"><span class="subtext">Founder & CEO Alies</span> </p>
+        <br>
+        <p class="center"> "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum"  </p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="center">
+            <a href="www.gmail.com" id="contact"><span class="text-size">Leave me a message in the</span>
+            programming.herol@gmail.com </a>
+        </div>
 
-    <img src="images/peter.png" alt="">
+    </section>
+    <footer >
+        <p class="center">Programming Hero initiative. © 2020 All rights Reserved. </p> 
+    </footer>
 </body>
 </html>
